syntax = "proto3";

option csharp_namespace = "SJZ.UserProfileService";

package user;

// The user service definition.
service UserSvc {
	// Get or Create a user
	rpc GetOrCreate (UserRequest) returns (UserResponse);
}

message UserRequest {
	string name = 1;
	string email = 2;
	string avatarUrl = 3;
	string thirdPartyProvider = 4;
	string thirdPartyId = 5;
}

message UserResponse {
	string id = 1;
	string name = 2;
	string email = 3;
	string avatarUrl = 4;
}